# AC-Villager-Compatibility-Check

./: .gitignore  LICENSE  Readme.md  data_model.py  data_reader.py  main.py  pyproject.toml  utils.py
data/: personality_compatibility.json  villager.json
data/test/: acnh_villager
src/: compatibility_caculator.py  data_model.py  data_reader.py  utils.py
test/: data_reader_test.py  utils_test.py
