[tool.poetry]
name = "acnh_villiger_compatibility_calc"
version = "0.1.0"
description = "A utility to calculate the villiger's compatibility"
authors = ["Jiayang Li <admin@0x10c.pw>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
